--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
     </head>
 
     <body>
-        <a href="https://vt5u.adj.st/">Click here to open the app</a>
+        <a href="adjust-example://myapp">Click here to open the app</a>
     </body>
 
 </html>
