--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
     </head>
 
     <body>
-        <a href="https://app.adjust.com?">Android w/ scheme + path</a>
+        <a href="https://app.adjust.com?deep_link=adjust-example">Android w/ scheme + path</a>
     </body>
 
 </html>
