--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
     </head>
 
     <body>
-        <a href="https://adjust-example">Android test deeplink</a>
+        <a href="adjust-example://myapp">Android deeplink test</a>
     </body>
 
 </html>
