--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
     </head>
 
     <body>
-        <a href="adjust://">Android deeplink test</a>
+        <p><a href="adjust://">Insights scheme</a></p>
     </body>
 
 </html>
