--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
     </head>
 
     <body>
-        <p><a href="adjust-example://">Adjust scheme</a></p>
+        <p><a id="adjust-scheme-base" href="adjust-example://">Adjust scheme</a></p>
     </body>
 
 </html>
