--- a/html/index.html
+++ b/html/index.html
@@ -5,11 +5,11 @@
     </head>
 
     <body>
-        <p style="font-size:36px><a id="adjust-scheme-base" href="adjust-example://">Adjust scheme</a></p>
-        <p style="font-size:36px><a id="adjust-scheme-base-2" href="adjust-example://">Adjust scheme 2</a></p>
-        <p style="font-size:36px><a id="adjust-scheme-base-3" href="adjust-example://">Adjust scheme 3</a></p>
-        <p style="font-size:36px><a id="adjust-scheme-base-4" href="adjust-example://">Adjust scheme 4</a></p>
-        <p style="font-size:36px><a id="adjust-scheme-base-5" href="adjust-example://">Adjust scheme 5</a></p>
+        <p><a id="adjust-scheme-base" href="adjust-example://">Adjust scheme</a></p>
+        <p><a id="adjust-scheme-base-2" href="adjust-example://">Adjust scheme 2</a></p>
+        <p><a id="adjust-scheme-base-3" href="adjust-example://">Adjust scheme 3</a></p>
+        <p><a id="adjust-scheme-base-4" href="adjust-example://">Adjust scheme 4</a></p>
+        <p><a id="adjust-scheme-base-5" href="adjust-example://">Adjust scheme 5</a></p>
     </body>
 
 </html>
