--- a/html/index.html
+++ b/html/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
     <title>Testing deeplink</title>
-    <style type="text/css">p {font-size:36px;}</style>
+    <style>p {font-size:36px;}</style>
     </head>
 
     <body>
