--- a/html/index.html
+++ b/html/index.html
@@ -6,11 +6,8 @@
     </head>
 
     <body>
-        <p><a id="adjust-scheme-base" href="adjust-example://">Adjust scheme</a></p>
-        <p><a id="adjust-scheme-base-2" href="adjust-example://">Adjust scheme 2</a></p>
-        <p><a id="adjust-scheme-base-3" href="adjust-example://">Adjust scheme 3</a></p>
-        <p><a id="adjust-scheme-base-4" href="adjust-example://">Adjust scheme 4</a></p>
-        <p><a id="adjust-scheme-base-5" href="adjust-example://">Adjust scheme 5</a></p>
+        <p><a id="android-scheme-path" href="adjust-example://">Adjust scheme</a></p>
+        <p><a id="android-tracker-url-deeplink" href="https://app.adjust.com/1zupgzo?deeplink=adjust-example://">Tracker URL + Deeplink</a></p>
     </body>
 
 </html>
