--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
 
     <body>
         <p><a id="android-scheme-path" href="adjust-example://">Adjust scheme</a></p>
-        <p><a id="android-tracker-url-deeplink" href="https://app.adjust.com/1zupgzo?deeplink=adjust-example://">Tracker URL + Deeplink</a></p>
+        <p><a id="android-tracker-url-deeplink" href="https://app.adjust.com/1zupgzo?deeplink=com.adjust.examples">Tracker URL + Deeplink</a></p>
     </body>
 
 </html>
