--- a/html/index.html
+++ b/html/index.html
@@ -9,6 +9,7 @@
         <p><a id="android-scheme-path" href="adjust-example://">Adjust scheme</a></p>
         <p><a id="android-tracker-url-deeplink" href="https://app.adjust.com/1zupgzo?deeplink=adjust-example%3A%2F%2F">Tracker URL + Deeplink</a></p>
         <p><a id="android-app-link-path" href="https://app.adjust.com/1zupgzo?gps_adid=131e7e95-4353-476e-ab57-b4a8a4050f36&deeplink=adjust-example%3A%2F%2F">App link path</a></p>
+        <p><a id="android-jsr-ulink" href="https://app.adjust.com/jsr?url=https%3A%2F%2Fcjzu.adj.st">JSR ulink</a></p>
     </body>
 
 </html>
