--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
         <p><a id="android-tracker-url-deeplink" href="https://app.adjust.com/1zupgzo?deeplink=adjust-example%3A%2F%2F">Tracker URL + Deeplink</a></p>
         <p><a id="android-app-link-path" href="https://app.adjust.com/1zupgzo?gps_adid=131e7e95-4353-476e-ab57-b4a8a4050f36&deeplink=adjust-example%3A%2F%2F">App link path</a></p>
         
-        <p><a id="ios-sulink" href="https://cjzu.adj.st?adj_t=1zupgzo">Sulink</a></p>
+        <p><a id="ios-sulink" href="https://cjzu.adj.st/">Sulink only</a></p>
     </body>
 
 </html>
