--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,7 @@
         <p><a id="android-app-link-path" href="https://app.adjust.com/1zupgzo?gps_adid=131e7e95-4353-476e-ab57-b4a8a4050f36&deeplink=adjust-example%3A%2F%2F">App link path</a></p>
         <p></p>
         <p><a id="ios-sulink" href="https://cjzu.adj.st/">Sulink only</a></p>
-        <p><a id="ios-sulink" href="https://cjzu.adj.st?adj_t=1zupgzo">Sulink + tracker</a></p>
+        <p><a id="ios-sulink-tracker" href="https://cjzu.adj.st?adj_t=1zupgzo">Sulink + tracker</a></p>
     </body>
 
 </html>
