--- a/html/index.html
+++ b/html/index.html
@@ -22,7 +22,7 @@
         <p><a id="ios-old-jsr" href="https://app.adjust.com/jsr?url=https://cjzu.adj.st?adj_t=1zupgzo">Old JSR</a></p>
         <p><a id="ios-new-jsr" href="https://cjzu.adj.st?adjust_t=1zupgzo&adjust_jsr=1">New JSR</a></p>
         <p><a id="ios-adj-deeplink-js" href="https://cjzu.adj.st?adjust_t=1zupgzo&adjust_deeplink_js=1">Adjust deeplink JS</a></p>
-        <p><a id="ios-standart-link-redirect" href="https://app.adjust.com/1zupgzo?deeplink=adjust%3A%2F%2F&redirect=https://app.adjust.com">Standart link redirect</a></p>
+        <p><a id="ios-standart-link-redirect" href="https://app.adjust.com/1zupgzo?deeplink=adjust-example%3A%2F%2F&redirect=https://app.adjust.com">Standart link redirect</a></p>
     </body>
 
 </html>
