--- a/html/index.html
+++ b/html/index.html
@@ -23,6 +23,9 @@
         <p><a id="ios-new-jsr" href="https://cjzu.adj.st?adjust_t=1zupgzo&adjust_jsr=1">New JSR</a></p>
         <p><a id="ios-adj-deeplink-js" href="https://cjzu.adj.st?adjust_t=1zupgzo&adjust_deeplink_js=1">Adjust deeplink JS</a></p>
         <p><a id="ios-standart-link-redirect" href="https://app.adjust.com/1zupgzo?deeplink=adjust-example%3A%2F%2F&redirect=https://app.adjust.com">Standart link redirect</a></p>
+        
+        <p><a href="https://sendgridtesting.adjust.com/">Send Grid test 1</a></p>
+        <p><a href="https://sendgridtesting.adjust.com/" universal="true">Send Grid test 2</a></p>
     </body>
 
 </html>
