--- a/html/index.html
+++ b/html/index.html
@@ -26,6 +26,7 @@
         
         <p><a href="https://sendgridtesting.adjust.com/">Send Grid test 1</a></p>
         <p><a href="https://sendgridtesting.adjust.com/" universal="true">Send Grid test 2</a></p>
+        <p><a href="https://8wcw.adj.st/">Send Grid test sulink</a></p>
     </body>
 
 </html>
