--- a/html/index.html
+++ b/html/index.html
@@ -27,6 +27,8 @@
         <p><a href="https://sendgridtesting.adjust.com/">Send Grid test 1</a></p>
         <p><a href="https://sendgridtesting.adjust.com/" universal="true">Send Grid test 2</a></p>
         <p><a href="https://8wcw.adj.st/">Send Grid test sulink</a></p>
+        
+        <p><a href="https://app.adjust.com/6coo2bf?deeplink=arsquare://">arsquare</a></p>
     </body>
 
 </html>
