--- a/html/index.html
+++ b/html/index.html
@@ -29,7 +29,7 @@
         <p><a href="https://8wcw.adj.st/">Send Grid test sulink</a></p>
         
         <p><a href="https://app.adjust.com/6coo2bf?deeplink=arsquare://">arsquare</a></p>
-        <p><a href="https://app.adjust.com/6coo2bf?deeplink=arsquare:/">arsquare</a></p>
+        <p><a href="https://app.adjust.com/1zupgzo?deeplink=adjust-example:/">test</a></p>
     </body>
 
 </html>
